--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 				</div>
 				<div class="item-navs">
 					<ul class="mb-0">
-						<li class="text-white item-nav">Home</li>
-						<li class="text-white item-nav">About</li>
-						<li class="text-white item-nav">Menu</li>
-						<li class="text-white item-nav">Gallery</li>
-						<li class="text-white item-nav">Contact</li>
+						<li class="text-white item-nav"><a href="./index.html">Home</a></li>
+						<li class="text-white item-nav"><a href="./about.html">About</a></li>
+						<li class="text-white item-nav"><a href="./menu.html">Menu</a></li>
+						<li class="text-white item-nav"><a href="./gallery.html">Gallery</a></li>
+						<li class="text-white item-nav"><a href="./contact.html">Contact</a></li>
 						<a href="#" class="btn btn-menu text-white primary-bg">Book a Table</a>
 						<div class="menulogo d-md-block d-lg-none" onclick="toggleCartt()">
 							<i class="ri-menu-3-line"></i>
@@ -30,6 +30,418 @@
 				</div>
 			</div>
 		</div>
+		<!-- banner slider  -->
+		<div id="customCarousel" class="carousel slide">
+			<div class="carousel-inner">
+				<div class="carousel-item active" style="background-image: url('./images/banner-main.png');background-position: center;background-repeat: no-repeat;background-size: cover;">
+					<div class="container-main">
+						<div class="banner-content">
+							<h4 class="text-center small-text-banner primary-color">MAKE A ORDER</h4>
+							<h1 class="mb-0 text-white text-center banner-main-text">Experiencem The Best Only <br> Taste of Italy</h1>
+							<p class="text-center text-white bottom-small-text">Mistake Idea Of Denucing  And Parsing Pain</p>
+							<a href="#" class="btn explore-btn-banner text-white">Read More <i class="ri-arrow-right-s-line"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="carousel-item" style="background-image: url('./images/banner-main.png');background-position: center;background-repeat: no-repeat;background-size: cover;"">
+					<div class="container-main">
+						<div class="banner-content">
+							<h4 class="text-center small-text-banner primary-color">MAKE A ORDER</h4>
+							<h1 class="mb-0 text-white text-center banner-main-text">Experiencem The Best Only <br> Taste of Italy</h1>
+							<p class="text-center text-white bottom-small-text">Mistake Idea Of Denucing  And Parsing Pain</p>
+							<a href="#" class="btn explore-btn-banner text-white">Read More <i class="ri-arrow-right-s-line"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="carousel-item" style="background-image: url('./images/banner-main.png');background-position: center;background-repeat: no-repeat;background-size: cover;"">
+					<div class="container-main">
+						<div class="banner-content">
+							<h4 class="text-center small-text-banner primary-color">MAKE A ORDER</h4>
+							<h1 class="mb-0 text-white text-center banner-main-text">Experiencem The Best Only <br> Taste of Italy</h1>
+							<p class="text-center text-white bottom-small-text">Mistake Idea Of Denucing  And Parsing Pain</p>
+							<a href="#" class="btn explore-btn-banner text-white">Read More <i class="ri-arrow-right-s-line"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Navigation Controls -->
+			<a class="carousel-control-prev" href="#customCarousel" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#customCarousel" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+		<!-- slider end  -->
+		<div class="container-main">
+			<div class="row">
+				<div class="col-lg-6" style="margin: auto;">
+					<div class="about-home-box box-about">
+						<h3 class="mb-0 primary-color text-about-head-home">About Us</h3>
+						<h1 class="mb-0 text-white main-txt-home-about">Discover Lorem From <br> Flavors Within Wines.</h1>
+						<p class="mb-0 sub-txt-about-home">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium et consequuntur omnis sit voluptatibus deleniti id quam officia maiores adipisci?</p>
+						<a href="#" class="btn read-more-btn text-white">Read More</a>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="about-home-box">
+						<img class="abou-home-img" src="./images/about3.jpg" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- end about div  -->
+		<!-- services div  -->
+		<div class="container-main pt-4">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="service-head-main-dv">
+						<h3 class="mb-0 service-txt-home primary-color text-center">Services</h3>
+						<h1 class="mb-0 text-white text-center service-txt-home-main">Try Our Special Offer</h1>
+					</div>
+				</div>
+				<div class="col-lg-4">
+					<div class="service-img-box">
+						<img class="service-img" src="./images/services-1.png" alt="">
+					</div>
+				</div>
+				<div class="col-lg-4">
+					<div class="service-img-box">
+						<img class="service-img" src="./images/services-2.png" alt="">
+					</div>
+				</div>
+				<div class="col-lg-4">
+					<div class="service-img-box">
+						<img class="service-img" src="./images/service-3.png" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- services end  -->
+		<!-- menu div  -->
+		<div class="container-main">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="menu-dv">
+						<h4 class="text-center mb-0 menu-txt-home primary-color">From Our Menu</h4>
+						<h1 class="text-center text-white mb-0 try-txt">Try Our Daily Offers</h1>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="menu-box">
+						<div class="box-main-menu">
+							<div class="left-item-box-sub">
+								<div class="menu-img-dv">
+									<img class="menu-item-img" src="./images/service-3.png" alt="">
+								</div>
+								<div class="item-name-dv">
+									<h3 class="menu-item-name mb-0 text-white">Sandwitch</h3>
+									<p class="menu-item-sub mb-0 text-white">Fresh Item Served</p>
+								</div>
+							</div>
+						</div>
+						<div class="border-dv"></div>
+						<div class="rate-div-menu">
+							<h3 class="rate mb-0">₹650</h3>
+						</div>
+					</div>
+					<!-- ==================== -->
+					<div class="menu-box">
+						<div class="box-main-menu">
+							<div class="left-item-box-sub">
+								<div class="menu-img-dv">
+									<img class="menu-item-img" src="./images/services-1.png" alt="">
+								</div>
+								<div class="item-name-dv">
+									<h3 class="menu-item-name mb-0 text-white">Chiken</h3>
+									<p class="menu-item-sub mb-0 text-white">Fresh Item</p>
+								</div>
+							</div>
+						</div>
+						<div class="border-dv"></div>
+						<div class="rate-div-menu">
+							<h3 class="rate mb-0">₹650</h3>
+						</div>
+					</div>
+					<!-- ==================== -->
+					<div class="menu-box">
+						<div class="box-main-menu">
+							<div class="left-item-box-sub">
+								<div class="menu-img-dv">
+									<img class="menu-item-img" src="./images/services-2.png" alt="">
+								</div>
+								<div class="item-name-dv">
+									<h3 class="menu-item-name mb-0 text-white">Burger</h3>
+									<p class="menu-item-sub mb-0 text-white">Fresh Item Served</p>
+								</div>
+							</div>
+						</div>
+						<div class="border-dv"></div>
+						<div class="rate-div-menu">
+							<h3 class="rate mb-0">₹650</h3>
+						</div>
+					</div>
+					<!-- ==================== -->
+					<div class="menu-box">
+						<div class="box-main-menu">
+							<div class="left-item-box-sub">
+								<div class="menu-img-dv">
+									<img class="menu-item-img" src="./images/service-3.png" alt="">
+								</div>
+								<div class="item-name-dv">
+									<h3 class="menu-item-name mb-0 text-white">Sandwitch</h3>
+									<p class="menu-item-sub mb-0 text-white">Fresh Item Served</p>
+								</div>
+							</div>
+						</div>
+						<div class="border-dv"></div>
+						<div class="rate-div-menu">
+							<h3 class="rate mb-0">₹650</h3>
+						</div>
+					</div>
+					<!-- ==================== -->
+					<div class="menu-box">
+						<div class="box-main-menu">
+							<div class="left-item-box-sub">
+								<div class="menu-img-dv">
+									<img class="menu-item-img" src="./images/service-3.png" alt="">
+								</div>
+								<div class="item-name-dv">
+									<h3 class="menu-item-name mb-0 text-white">Sandwitch</h3>
+									<p class="menu-item-sub mb-0 text-white">Fresh Item Served</p>
+								</div>
+							</div>
+						</div>
+						<div class="border-dv"></div>
+						<div class="rate-div-menu">
+							<h3 class="rate mb-0">₹650</h3>
+						</div>
+					</div>
+					<!-- ==================== -->
+				</div>
+				<div class="col-lg-6">
+					<div class="menu-box">
+						<div class="box-main-menu">
+							<div class="left-item-box-sub">
+								<div class="menu-img-dv">
+									<img class="menu-item-img" src="./images/service-3.png" alt="">
+								</div>
+								<div class="item-name-dv">
+									<h3 class="menu-item-name mb-0 text-white">Sandwitch</h3>
+									<p class="menu-item-sub mb-0 text-white">Fresh Item Served</p>
+								</div>
+							</div>
+						</div>
+						<div class="border-dv"></div>
+						<div class="rate-div-menu">
+							<h3 class="rate mb-0">₹650</h3>
+						</div>
+					</div>
+					<!-- ==================== -->
+					<div class="menu-box">
+						<div class="box-main-menu">
+							<div class="left-item-box-sub">
+								<div class="menu-img-dv">
+									<img class="menu-item-img" src="./images/services-1.png" alt="">
+								</div>
+								<div class="item-name-dv">
+									<h3 class="menu-item-name mb-0 text-white">Chiken</h3>
+									<p class="menu-item-sub mb-0 text-white">Fresh Item</p>
+								</div>
+							</div>
+						</div>
+						<div class="border-dv"></div>
+						<div class="rate-div-menu">
+							<h3 class="rate mb-0">₹650</h3>
+						</div>
+					</div>
+					<!-- ==================== -->
+					<div class="menu-box">
+						<div class="box-main-menu">
+							<div class="left-item-box-sub">
+								<div class="menu-img-dv">
+									<img class="menu-item-img" src="./images/services-2.png" alt="">
+								</div>
+								<div class="item-name-dv">
+									<h3 class="menu-item-name mb-0 text-white">Burger</h3>
+									<p class="menu-item-sub mb-0 text-white">Fresh Item Served</p>
+								</div>
+							</div>
+						</div>
+						<div class="border-dv"></div>
+						<div class="rate-div-menu">
+							<h3 class="rate mb-0">₹650</h3>
+						</div>
+					</div>
+					<!-- ==================== -->
+					<div class="menu-box">
+						<div class="box-main-menu">
+							<div class="left-item-box-sub">
+								<div class="menu-img-dv">
+									<img class="menu-item-img" src="./images/service-3.png" alt="">
+								</div>
+								<div class="item-name-dv">
+									<h3 class="menu-item-name mb-0 text-white">Sandwitch</h3>
+									<p class="menu-item-sub mb-0 text-white">Fresh Item Served</p>
+								</div>
+							</div>
+						</div>
+						<div class="border-dv"></div>
+						<div class="rate-div-menu">
+							<h3 class="rate mb-0">₹650</h3>
+						</div>
+					</div>
+					<!-- ==================== -->
+					<div class="menu-box">
+						<div class="box-main-menu">
+							<div class="left-item-box-sub">
+								<div class="menu-img-dv">
+									<img class="menu-item-img" src="./images/service-3.png" alt="">
+								</div>
+								<div class="item-name-dv">
+									<h3 class="menu-item-name mb-0 text-white">Sandwitch</h3>
+									<p class="menu-item-sub mb-0 text-white">Fresh Item Served</p>
+								</div>
+							</div>
+						</div>
+						<div class="border-dv"></div>
+						<div class="rate-div-menu">
+							<h3 class="rate mb-0">₹650</h3>
+						</div>
+					</div>
+					<!-- ==================== -->
+				</div>
+				<div class="col-lg-12">
+					<div class="btn-dv-menu">
+						<a href="#" class="btn explore-btn-banner text-white">View Our Menu</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- menu div end  -->
+		<!-- video section  -->
+		<div class="container-main">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="video-dv">
+						<iframe width="" height="450" src="https://www.youtube.com/embed/5-nhnZEBkgI?si=id6aTTzDflwzI1Nc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- video section end  -->
+		<!-- gallery div  -->
+		<div class="gallery-main-box">
+			<div class="container-main">
+				<div class="row">
+					<div class="col-lg-3 col-md-6">
+						<div class="gallery-box">
+							<img class="gallery-img" src="./images/galler.jpg" alt="">
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6">
+						<div class="gallery-box">
+							<img class="gallery-img" src="./images/galler.jpg" alt="">
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6">
+						<div class="gallery-box">
+							<img class="gallery-img" src="./images/galler.jpg" alt="">
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6">
+						<div class="gallery-box">
+							<img class="gallery-img" src="./images/galler.jpg" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- gallery div end  -->
+		<!-- testimonial section  -->
+		<div class="container-main bg-padding" style="background-image: url('./images/bg-img.jpg');background-position: center;background-repeat: no-repeat;background-size: cover;">
+			<div class="row">
+				<div class="col-lg-6 testimonial">
+					<div class="testimonial-dv">
+						<div class="box-testimonial">
+							<i class="ri-double-quotes-r quote"></i>
+							<h3 class="testimonial-name mb-0 text-white">John s dhj </h3>
+							<h4 class="testimonial-name-sub mb-0  primary-color">Cook</h4>
+							<p class="text-white mb-0 review-testi">Loasdas arem ipsud asdasm dolor sit amet consectetur adipisicing elit. Eligendi placeat vel ex nihil delectus perspiciatis saepe odit. Inventore, nihil repellendus?</p>
+							<div class="review-star-dv">
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6 testimonial">
+					<div class="testimonial-dv">
+						<div class="box-testimonial">
+							<i class="ri-double-quotes-r quote"></i>
+							<h3 class="testimonial-name mb-0 text-white">Shammas</h3>
+							<h4 class="testimonial-name-sub mb-0  primary-color">Cook</h4>
+							<p class="text-white mb-0 review-testi">Loreasdas dsm ipsum dolor sit amet consectetur adipisicing elit. Eligendi placeat vel ex nihil delectus perspiciatis saepe odit. Inventore, nihil repellendus?</p>
+							<div class="review-star-dv">
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6 testimonial">
+					<div class="testimonial-dv">
+						<div class="box-testimonial">
+							<i class="ri-double-quotes-r quote"></i>
+							<h3 class="testimonial-name mb-0 text-white">Samyuktha</h3>
+							<h4 class="testimonial-name-sub mb-0  primary-color">Cook</h4>
+							<p class="text-white mb-0 review-testi">dfhahs ashd dolor sit amet consectetur adipisicing elit. Eligendi placeat vel ex nihil delectus perspiciatis saepe odit. Inventore, nihil repellendus?</p>
+							<div class="review-star-dv">
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6 testimonial">
+					<div class="testimonial-dv">
+						<div class="box-testimonial">
+							<i class="ri-double-quotes-r quote"></i>
+							<h3 class="testimonial-name mb-0 text-white">John </h3>
+							<h4 class="testimonial-name-sub mb-0  primary-color">Cook</h4>
+							<p class="text-white mb-0 review-testi">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi placeat vel ex nihil delectus perspiciatis saepe odit. Inventore, nihil repellendus?</p>
+							<div class="review-star-dv">
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+								<i class="ri-star-fill"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="testimonial-dv">
+						
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- testimonial end  -->
+
+
+
 
 
 
@@ -89,20 +501,7 @@
 		<div class="footer-copy mt-3">
 			<p class="copy-txt mb-0 text-white text-center" >Designed And Developed By  <a target="_blank" href="https://erebsglobal.com/"> ERE Business Solutions</a></p>
 		</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	<script src="./js/main.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
