--- a/gallery.html
+++ b/gallery.html
@@ -18,10 +18,10 @@
 				<div class="item-navs">
 					<ul class="mb-0">
 						<li class="text-white item-nav"><a href="./index.html">Home</a></li>
-						<li class="text-white item-nav"><a href="./about.html">About</a></li>
+						<li class="text-white item-nav"><a href="./about.html">About Us</a></li>
 						<li class="text-white item-nav"><a href="./menu.html">Menu</a></li>
 						<li class="text-white item-nav"><a href="./gallery.html">Gallery</a></li>
-						<li class="text-white item-nav"><a href="./contact.html">Contact</a></li>
+						<li class="text-white item-nav"><a href="./contact.html">Contact Us</a></li>
 						<a href="#" class="btn btn-menu text-white primary-bg">Book a Table</a>
 						<div class="menulogo d-md-block d-lg-none" onclick="toggleCartt()">
 							<i class="ri-menu-3-line"></i>
@@ -30,6 +30,21 @@
 				</div>
 			</div>
 		</div>
+				<!-- sidebar  -->
+				<div class="sidebar">
+					<div class="navbar-sidebar">
+						<ul>
+							<li><a class="active" href="index.html">Home</a></li>
+							<li><a class="active" href="./menu.html">Menu</a></li>    
+							<li><a class="active" href="./about.html">About Us</a></li>    
+							<li><a class="active" href="./gallery.html">Gallery</a></li>  
+							<li><a class="active" href="./contact.html">Contact Us</a></li> 
+							<a href="#" style="width: 100%;" class="btn btn-menu text-white primary-bg" data-toggle="modal" data-target="#loginModal">Book a Table</a>    
+							<a href="#" style="width: 100%;" class="btn explore-btn-banner text-white mt-3" data-toggle="modal" data-target="#loginModalselect">Select Resturent</a>
+						</ul>
+					</div>
+					<div class="d-inline closse" onclick="toggleCartt()"><i class="ri-close-circle-line"></i></div>
+				</div>
 				<!-- banner main  -->
 				<div class="banner-brudcumb-main" style="background-image: url('./images/about-banner.jpg');background-position: center;background-repeat: no-repeat;background-size: cover;">
 					<div class="container-main">
