--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pathiri Resturent</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/pathiri.css">
-	<link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
-</head>
-<body>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Pathiri Resturent</title>
+    <link  rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/common.css">
+		<link rel="stylesheet" href="css/pathiri.css">
+		<link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
+  </head>
+  <body>
 		<div class="container-main">
 			<div class="headers">
 				<div class="logo-navbar">
@@ -48,7 +49,7 @@
 		<!-- banner slider  -->
 		<div id="customCarousel" class="carousel slide">
 			<div class="carousel-inner">
-				<div class="carousel-item active" style="background-image: url('./images/banner-main.png');background-position: center;background-repeat: no-repeat;background-size: cover;">
+				<div class="carousel-item active " style="background-image: url('./images/banner-main.png');background-position: center;background-repeat: no-repeat;background-size: cover;">
 					<div class="container-main">
 						<div class="banner-content">
 							<h4 class="text-center small-text-banner primary-color">MAKE A ORDER</h4>
@@ -109,7 +110,8 @@
 		</div>
 		<!-- end about div  -->
 		<!-- services div  -->
-		<div class="container-main pt-4">
+
+		<div class="container-main">
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="service-head-main-dv">
@@ -117,23 +119,54 @@
 						<h1 class="mb-0 text-white text-center service-txt-home-main">Try Our Special Offer</h1>
 					</div>
 				</div>
-				<div class="col-lg-4">
+			</div>
+			<div class="slider">
+				<div class="item" >
 					<div class="service-img-box">
 						<img class="service-img" src="./images/services-1.png" alt="">
 					</div>
 				</div>
-				<div class="col-lg-4">
+				<div class="item">
+					<div class="service-img-box">
+						<img class="service-img" src="./images/services-1.png" alt="">
+					</div>
+				</div>
+				<div class="item">
+					<div class="service-img-box">
+						<img class="service-img" src="./images/services-1.png" alt="">
+					</div>
+				</div>
+				<div class="item">
 					<div class="service-img-box">
 						<img class="service-img" src="./images/services-2.png" alt="">
 					</div>
 				</div>
-				<div class="col-lg-4">
+				<div class="item">
 					<div class="service-img-box">
-						<img class="service-img" src="./images/service-3.png" alt="">
+						<img class="service-img" src="./images/services-1.png" alt="">
+					</div>
+				</div>
+				<div class="item">
+					<div class="service-img-box">
+						<img class="service-img" src="./images/services-1.png" alt="">
+					</div>
+				</div>
+				<div class="item">
+					<div class="service-img-box">
+						<img class="service-img" src="./images/services-1.png" alt="">
+					</div>
+				</div>
+				<div class="item">
+					<div class="service-img-box">
+						<img class="service-img" src="./images/services-1.png" alt="">
 					</div>
 				</div>
 			</div>
 		</div>
+
+
+
+
 		<!-- services end  -->
 		<!-- menu div  -->
 		<div class="container-main">
@@ -152,6 +185,7 @@
 									<img class="menu-item-img" src="./images/service-3.png" alt="">
 								</div>
 								<div class="item-name-dv">
+									<small class="tag-menu"><i class="ri-pushpin-fill"></i> Must Try</small>
 									<h3 class="menu-item-name mb-0 text-white">Sandwitch</h3>
 									<p class="menu-item-sub mb-0 text-white">Fresh Item Served</p>
 								</div>
@@ -160,6 +194,7 @@
 						<div class="border-dv"></div>
 						<div class="rate-div-menu">
 							<h3 class="rate mb-0">₹650</h3>
+							<h4 class="descount-price mb-0">₹750</h4>
 						</div>
 					</div>
 					<!-- ==================== -->
@@ -170,6 +205,7 @@
 									<img class="menu-item-img" src="./images/services-1.png" alt="">
 								</div>
 								<div class="item-name-dv">
+									<small class="tag-menu"><i class="ri-pushpin-fill"></i>New Arrival</small>
 									<h3 class="menu-item-name mb-0 text-white">Chiken</h3>
 									<p class="menu-item-sub mb-0 text-white">Fresh Item</p>
 								</div>
@@ -178,6 +214,7 @@
 						<div class="border-dv"></div>
 						<div class="rate-div-menu">
 							<h3 class="rate mb-0">₹650</h3>
+							<h4 class="descount-price mb-0">₹750</h4>
 						</div>
 					</div>
 					<!-- ==================== -->
@@ -188,6 +225,7 @@
 									<img class="menu-item-img" src="./images/services-2.png" alt="">
 								</div>
 								<div class="item-name-dv">
+									<small class="tag-menu"><i class="ri-pushpin-fill"></i>Spicy</small>
 									<h3 class="menu-item-name mb-0 text-white">Burger</h3>
 									<p class="menu-item-sub mb-0 text-white">Fresh Item Served</p>
 								</div>
@@ -196,6 +234,7 @@
 						<div class="border-dv"></div>
 						<div class="rate-div-menu">
 							<h3 class="rate mb-0">₹650</h3>
+							<h4 class="descount-price mb-0">₹750</h4>
 						</div>
 					</div>
 					<!-- ==================== -->
@@ -214,6 +253,7 @@
 						<div class="border-dv"></div>
 						<div class="rate-div-menu">
 							<h3 class="rate mb-0">₹650</h3>
+							<h4 class="descount-price mb-0">₹750</h4>
 						</div>
 					</div>
 					<!-- ==================== -->
@@ -464,9 +504,22 @@
 			<i class="ri-close-circle-line close" data-dismiss="modal" aria-label="Close"></i>
 			<div class="modal-body modal-loginform pt-0">
 				<div class="form-menu-table">
-					<h3 class="text-white choose-rst">Choose Resturent:</h3>
-					<a href="#" class="btn resturent-btn text-white">White House Resturent, Calicut</a>
-					<a href="#" class="btn resturent-btn text-white">Le Meredian Resturent, Kochi</a>
+					<h3 class="text-white choose-rst mb-0" style="display: flex;align-items: center;"><i style="margin-right: 10px;" class="ri-map-pin-2-line"></i> You are in</h3>
+					<div class="img-select">
+						<div class="image-container" id="image1-container">
+							<img id="image1" src="./images/galler.jpg" alt="Image 1">
+							<div class="checkmark"><i class="ri-check-double-line text-white"></i></div>
+							<h4 class="rest-name text-white text-center mb-0">Le Meridian Kochi</h4>
+							<p class="sub-addrss mb-0">Envato HQ 24 Fifthst., Los Angeles, USA</p>
+						</div>
+						<div class="image-container" id="image2-container">
+							<img id="image2" src="./images/galler.jpg" alt="Image 1">
+							<div class="checkmark"><i class="ri-check-double-line text-white"></i></div>
+							<h4 class="rest-name text-white text-center mb-0">Hotel Le Hayath</h4>
+							<p class="sub-addrss mb-0">Envato HQ 24 Fifthst., Los Angeles, USA</p>
+						</div>
+					</div>
+					<a href="" type="submit" class="btn explore-btn-banner text-white mt-4">Submit</a>
 				</div>
 			</div>
 		</div>                                    
@@ -567,9 +620,43 @@
 		<div class="footer-copy mt-3">
 			<p class="copy-txt mb-0 text-white text-center" >Designed And Developed By  <a target="_blank" href="https://erebsglobal.com/"> ERE Business Solutions</a></p>
 		</div>
-	<script src="./js/main.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
+
+		<script src="./js/main.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+		<script type="text/javascript"  src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" ></script>
+		<script>
+			$(document).ready(function () {
+				$(".slider").slick({
+					infinite: true,
+					slidesToShow: 3,
+					slidesToScroll: 1,
+					speed: 100,
+					autoplaySpeed: 2000,
+					infinite: true,
+					autoplay: true,
+					centerMode: true,
+					centerPadding: "0",
+					arrows : false,
+					responsive: [
+			{
+				breakpoint: 991,
+				settings: {
+					slidesToShow: 3,
+				}
+			},
+			{
+				breakpoint: 767,
+				settings: {
+					slidesToShow: 1,
+				}
+			}
+		]
+				});
+				
+			});
+			
+		</script>
+	</body>
 </html>
